# kube-rust-playground

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  shared.mk
data/node/nginx/: index.html
first-controller/: Cargo.toml
k3d-data/: ingress.yml  namespaces.yml  nginx.yml  psp.yml  simple-web-service.yml
multiport/: Cargo.toml
multiport/src/: main.rs
sentry-test/: Cargo.toml  build.rs
sentry-test/src/: main.rs  prom_pg_mock.rs  statsd_server_mock.rs
simple-web-service/: .dockerignore  Cargo.toml  Dockerfile  Makefile
simple-web-service/src/: main.rs
whatever/: Cargo.toml
whatever/src/: main.rs
