[package]
name = "multiport"
version = "0.1.0"
authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.8"
async-std = { version = "1.5", features = ["attributes", "unstable"] }
async-compression = { version= "0.3", features = ["all", "stream"] }
femme = "1.3"
smol = { version = "0.1", optional = true }
prometheus = { version = "0.9", features = ["gen"] }
lazy_static = "1.4"
rand ="0.7" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
smol_runtime = ["smol"]
