[package]
name = "simple-web-service"
version = "1.0.0"
authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.8"
async-std = { version = "1.5", features = ["attributes"] }
femme = "2.0"
