[package]
name = "simple-web-service"
version = "1.0.0"
authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "0.3"
tide = "0.10"
mime = "0.3"
async-std = { version = "1.6", features = ["attributes"] }
femme = "2.1"
