[package]
name = "whatever"
version = "0.1.0"
authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.3"
arc-swap = "0.4"
async-std = { version = "1.6", features = ["attributes"] }
async-trait = "0.1"
beef = "0.4"
bollard = "0.7"
boondock = "0.1.0-alpha.1"
bus_queue = "0.5"
coercible_errors = "0.1"
concread = "0.1"
dashmap = "4.0.0-rc4"
dockerfile-parser = "0.5"
dockinfo = "1.0"
effective-limits = "0.5"
evmap = "10.0"
femme = "2.1"
futures = "0.3"
futures-util = "0.3"
getrandom = "0.1"
jemallocator = "0.3"
k8s-openapi = { version = "0.9", features = ["v1_17"] }
kube = "0.35"
lapin = "1.0"
oorandom = "11.1"
roperator = "0.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sharded-slab = "0.0.9"
shiplift = "0.6"
simple-symbol = "3.0"
tide = "0.11"
uuid = "0.8"
yyid = "0.6"
